fix spacing

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1068,6 +1068,12 @@ $size-header-pad: 4em;
 		}
 	}
 
+	.work-item h3 {
+		font-size: 1em;
+		margin: 0 0 0.5em 0;
+		display: flex;
+		justify-content: space-between;
+	}
 /* Header */
 
 	#header {
